--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -271,6 +271,7 @@ Tsinghua University in 2021.
 \subsection*{Teaching}
 \begin{itemize}
     \item Guest lecture on decentralized AI, IE598 Foundations of Modern Machine Learning, UIUC, Fall 2025.
+    \item Guest lecture on blockchain transaction fee mechanism, IE524 Optimization in Finance, UIUC, Fall 2025.
     \item Teaching Assistant, Causal \& Statistical Inference, Tsinghua University, Fall 2018.
     \item Discussion Session, Calculus, Tsinghua University, Fall 2015.
 \end{itemize}
@@ -302,6 +303,6 @@ Java, PHP.
 
 
 \begin{flushright}
-\emph{(Updated on Nov 14, 2025)}
+\emph{(Updated on Nov 18, 2025)}
 \par\end{flushright}
 \end{document}
