--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -155,14 +155,21 @@ Invited to \emph{INFORMS Conference on Security (IConS'24)}.
 
 A preliminary version presented on \emph{INFORMS Annual Meeting 2023}. 
 
+
+\section*{Other Papers}
+
+
+\paper{Multi-agent Adaptive Mechanism Design} \href{https://arxiv.org/abs/2512.21794}{[Link]}
+
+Qiushi Han{*}, David Simchi-Levi{*}, Renfei Tan{*}, \uline{Zishuo Zhao}{*}.
+
 \medskip{}
 
 \paper{VeriLLM: A Lightweight Framework for Publicly Verifiable Decentralized Inference} \href{https://www.arxiv.org/abs/2509.24257}{[Link]}
 
 Ke Wang, \uline{Zishuo Zhao}, Xinyuan Song, Bill Shi, Libin Xia, Chris Tong, Lynn Ai, Felix Qu, Eric Yang
 
-
-\section*{Other Papers}
+\medskip{}
 
 \paper{Personalized Pricing with Group Fairness Constraint} \href{https://dl.acm.org/doi/10.1145/3593013.3594097}{[Link]}
 
@@ -203,11 +210,6 @@ Hu.
 
 \emph{(Collaborators TBA)}
 
-\medskip{}
-
-\paper{Online Mechanism Design in Crowdsourcing Systems} %\A4M~\M4A
-
-with David Simchi-Levi, Qiushi Han and Renfei Tan.
 
 
 \section*{Awards}
@@ -303,6 +305,6 @@ Java, PHP.
 
 
 \begin{flushright}
-\emph{(Updated on Nov 18, 2025)}
+\emph{(Updated on Dec 31, 2025)}
 \par\end{flushright}
 \end{document}
