--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -56,7 +56,7 @@
 %\vspace{-5em}
 
 \begin{center}
-\texttt{zishuoz2@illinois.edu, wiku30.xyz}
+\texttt{zishuoz2@illinois.edu, wiku30.0@gmail.com,  wiku30.xyz}
 \par\end{center}
 
 %\vspace{-1.7em}
