--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -62,9 +62,8 @@
 %\vspace{-1.7em}
 
 \begin{center}
-PhD Candidate (ABD), ISE, University of Illinois Urbana-Champaign
+PhD, ISE, University of Illinois Urbana-Champaign
 
-\emph{(they/them/theirs, he/him/his)}
 \par\end{center}
 
 %\vspace{2em}
@@ -73,13 +72,12 @@ PhD Candidate (ABD), ISE, University of Illinois Urbana-Champaign
 \begin{itemize}
 \item \textbf{2025/07 - now }Research Intern, Gradient Network \href{https://gradient.network/}{[Website]}\\
 Research Topic: Incentive \& protocol design of decentralized AI systems.
-\item \textbf{2021/01 - now }PhD Candidate (ABD), Department of Industrial \& Enterprise
+\item \textbf{2021/01 - 2026/01} PhD Candidate (ABD), Department of Industrial \& Enterprise
 Systems Engineering, \\
 University of Illinois Urbana-Champaign\\
 Research Area: Operations Research\\
 Advisor: Yuan Zhou\\
-Expected Graduation: 2026\\
-Tentative Thesis Title: \emph{Incentive Design for Digital Economy and AI Platforms} 
+Thesis Title: \emph{Incentive Design for Digital Economy and AI Platforms} 
 \item \textbf{2023/09 - 2024/08} Visiting Student, Institute for Data Systems and Society (IDSS), \\
 Massachusetts Institute of Technology\\
 Research Topic: Data-Driven Dynamic Mechanism Design\\
@@ -305,6 +303,6 @@ Java, PHP.
 
 
 \begin{flushright}
-\emph{(Updated on Dec 31, 2025)}
+\emph{(Updated on Jan 9, 2026)}
 \par\end{flushright}
 \end{document}
