--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -97,7 +97,7 @@ Science and Technology, Tsinghua University
 
 \section*{Research Interest}
 
-I am a fifth-year PhD candidate in UIUC, majoring in operations research. My general research interest lies in the incentive design for digital economy and AI platforms, with applications in both centralized and decentralized platforms.
+I am a PhD in UIUC, majoring in operations research. My general research interest lies in the incentive design for digital economy and AI platforms, with applications in both centralized and decentralized platforms.
 
 I have a special interest in the mechanism design for blockchain and decentralized economics, with a \textcolor[rgb]{0.5,0.5,1}{(starry-eyed) dream}~\iDM on the exploration of the design and theoretical boundaries of \textbf{decentralized trustworthy AI} platforms, including (particularly) the current concern and initiative of \textbf{AI safety} for the upcoming AGI era.
 
@@ -159,7 +159,7 @@ A preliminary version presented on \emph{INFORMS Annual Meeting 2023}.
 
 \paper{Multi-agent Adaptive Mechanism Design} \href{https://arxiv.org/abs/2512.21794}{[Link]}
 
-Qiushi Han{*}, David Simchi-Levi{*}, Renfei Tan{*}, \uline{Zishuo Zhao}{*}.
+Qiushi Han{*}, David Simchi-Levi{*}, Renfei Tan{*}, \uline{Zishuo Zhao}{*}. (alphabetical order)
 
 \medskip{}
 
