--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -56,7 +56,7 @@
 %\vspace{-5em}
 
 \begin{center}
-\texttt{zishuoz2@illinois.edu, wiku30.0@gmail.com,  wiku30.xyz}
+\texttt{wiku30.0@gmail.com,  wiku30.xyz}
 \par\end{center}
 
 %\vspace{-1.7em}
@@ -165,7 +165,7 @@ Qiushi Han{*}, David Simchi-Levi{*}, Renfei Tan{*}, \uline{Zishuo Zhao}{*}. (alp
 
 \paper{VeriLLM: A Lightweight Framework for Publicly Verifiable Decentralized Inference} \href{https://www.arxiv.org/abs/2509.24257}{[Link]}
 
-Ke Wang, \uline{Zishuo Zhao}, Xinyuan Song, Bill Shi, Libin Xia, Chris Tong, Lynn Ai, Felix Qu, Eric Yang
+Ke Wang{*}, \uline{Zishuo Zhao}{*}, Xinyuan Song, Zelin Li, Libin Xia, Chris Tong, Bill Shi, Wenjie Qu, Eric Yang, Lynn Ai. (equal contribution)
 
 \medskip{}
 
@@ -303,6 +303,6 @@ Java, PHP.
 
 
 \begin{flushright}
-\emph{(Updated on Jan 9, 2026)}
+\emph{(Updated on Jan 22, 2026)}
 \par\end{flushright}
 \end{document}
