--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -77,7 +77,7 @@ Systems Engineering, \\
 University of Illinois Urbana-Champaign\\
 Research Area: Operations Research\\
 Advisor: Yuan Zhou\\
-Thesis Title: \emph{Incentive Design for Digital Economy and AI Platforms} 
+Thesis Title: \emph{Incentive Design for Digital Economy and AI Platforms} \href{https://wiku30.xyz/2026/PhD_Thesis.pdf}{[Link]}
 \item \textbf{2023/09 - 2024/08} Visiting Student, Institute for Data Systems and Society (IDSS), \\
 Massachusetts Institute of Technology\\
 Research Topic: Data-Driven Dynamic Mechanism Design\\
