--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -256,7 +256,7 @@ Tsinghua University in 2021.
 
 \begin{itemize}
     \item Journal Reviewing: Operations Research (2025)
-    \item Conference Reviewing: ESA (2024)
+    \item Conference Reviewing: ICML (2026), ESA (2024)
 \end{itemize}
 
 \subsection*{Mentoring}
@@ -303,6 +303,6 @@ Java, PHP.
 
 
 \begin{flushright}
-\emph{(Updated on Jan 22, 2026)}
+\emph{(Updated on Jan 28, 2026)}
 \par\end{flushright}
 \end{document}
