--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -70,9 +70,9 @@ PhD, ISE, University of Illinois Urbana-Champaign
 
 \section*{Background}
 \begin{itemize}
-\item \textbf{2025/07 - now }Research Intern, Gradient Network \href{https://gradient.network/}{[Website]}\\
+\item \textbf{2025/07 - 2026/01 }Research Intern, Gradient Network \href{https://gradient.network/}{[Website]}\\
 Research Topic: Incentive \& protocol design of decentralized AI systems.
-\item \textbf{2021/01 - 2026/01} PhD Candidate (ABD), Department of Industrial \& Enterprise
+\item \textbf{2021/01 - 2026/01} PhD, Department of Industrial \& Enterprise
 Systems Engineering, \\
 University of Illinois Urbana-Champaign\\
 Research Area: Operations Research\\
@@ -147,6 +147,8 @@ Invited to OR Talk by 运筹OR帷幄 (OR China) in 2024.
 
 \emph{In preparation for an extended version (2025).}
 
+Invited to \emph{INFORMS Annual Meeting 2025}.
+
 Invited to \emph{INFORMS Conference on Security (IConS'24)}.
 
 \emph{ACM EC Workshop on Foundation Models and Game Theory (ACM EC FMGT'24).}
@@ -160,6 +162,8 @@ A preliminary version presented on \emph{INFORMS Annual Meeting 2023}.
 \paper{Multi-agent Adaptive Mechanism Design} \href{https://arxiv.org/abs/2512.21794}{[Link]}
 
 Qiushi Han{*}, David Simchi-Levi{*}, Renfei Tan{*}, \uline{Zishuo Zhao}{*}. (alphabetical order)
+
+\textcolor{blue}{Best Paper Award}, Statistics \& Information session, 31st Annual LIDS Student Conference at MIT. (2026)
 
 \medskip{}
 
@@ -208,14 +212,14 @@ Hu.
 
 \emph{(Collaborators TBA)}
 
-
+\newpage
 
 \section*{Awards}
 
 \subsection*{Academic}
 \begin{itemize}
-\item \textbf{Best Paper Award}, NeurIPS Workshop on Decentralization and
-Trustworthy Machine Learning in Web3, 2022
+\item Best Paper Award, Statistics \& Information session, 31st Annual LIDS Student Conference at MIT, 2026
+\item Best Paper Award, NeurIPS Workshop on Decentralization and Trustworthy Machine Learning in Web3, 2022
 \item Crypto Economics Security Conference (CESC) Travel Award, 2022
 \item UIUC Graduate College Conference Presentation Award, 2021
 \item Xuetang Scholarship in Tsinghua University, 2016-2020
@@ -223,8 +227,6 @@ Trustworthy Machine Learning in Web3, 2022
 University, 2020
 \item 12th place in 24th Artificial Intelligence Programming Contest in
 Tsinghua University, 2020
-
-
 \item 15th place in 20th Artificial Intelligence Programming Contest in
 Tsinghua University, 2016. 
 \item Second Prize in Chinese Mathematical Olympiad (CMO), 2014
@@ -303,6 +305,6 @@ Java, PHP.
 
 
 \begin{flushright}
-\emph{(Updated on Jan 28, 2026)}
+\emph{(Updated on Feb 9, 2026)}
 \par\end{flushright}
 \end{document}
