--- a/CV/ZishuoZhao-CV.tex
+++ b/CV/ZishuoZhao-CV.tex
@@ -218,8 +218,8 @@ Hu.
 
 \subsection*{Academic}
 \begin{itemize}
-\item Best Paper Award, Statistics \& Information session, 31st Annual LIDS Student Conference at MIT, 2026
-\item Best Paper Award, NeurIPS Workshop on Decentralization and Trustworthy Machine Learning in Web3, 2022
+\item \textbf{Best Paper Award}, Statistics \& Information session, 31st Annual LIDS Student Conference at MIT, 2026
+\item \textbf{Best Paper Award}, NeurIPS Workshop on Decentralization and Trustworthy Machine Learning in Web3, 2022
 \item Crypto Economics Security Conference (CESC) Travel Award, 2022
 \item UIUC Graduate College Conference Presentation Award, 2021
 \item Xuetang Scholarship in Tsinghua University, 2016-2020
